# Prediction_bike_accident

./: .gitignore  README.md  future_hotspots_harsh_2025.html  future_hotspots_mild_2025.html  future_hotspots_normal_2025.html  index.html  pyproject.toml
data/: analysis_summary_stats.csv  future_predictions_results.csv  hotspot_analysis_results.csv  hotspot_prediction_report.txt  weather_analysis_results.csv
data/cleaned/: df_wea.csv  gdf_ams.csv  merged_ams_cc_accidents_matches_only.csv  yearly_wea.csv
data/raw/: FIETSTELLINGEN1723-ams.csv  https:::downloads.rijkswaterstaatdata.nl:bron:01-0  ongevallen_2015_2020.csv
notebook/: 01_ams_cc_cleaning.ipynb  02_bike_acc_cleaning.ipynb  05_bike_accident_visualization_results.ipynb  EDA.ipynb  ML_and_analysis.ipynb  accident_analysis_and_prediction.ipynb  additional_dset.ipynb  bike_acc_cleaning.ipynb  bike_accident_hotspot_prediction.ipynb  function_06.py  hotspot_analysis.ipynb  styled_feature_importance.py
presentation/: amsterdam_accident_map.html  bike_accidents_rd_map.html  future_hotspots_mild_2025.html  future_hotspots_normal_2025.html
python/: coordinate_merge_utils.py  create_folium_map.py  hotspot_clustering_analysis.py  predict_future_hotspots.py  run_styled_feature_importance.py  streamlit_demo.py  visualize_results.py  weather_merge_utils.py
