[project]
name = "prediction-bike-accident"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.6",
    "geodatasets>=2024.8.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
]
